--- a/project2/data.html
+++ b/project2/data.html
@@ -13,6 +13,7 @@
         velit eaque dolorum, autem aliquid praesentium fugiat voluptatibus voluptatum facilis nisi explicabo quisquam
         inventore. Iste rem dolore, magni debitis fugiat non harum neque soluta eum omnis optio asperiores. Facilis quas
         vel corporis neque officiis et!</p>
+        <p> kem cho bata</p>
 </body>
 
 </html>
